2006-05-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* Included into eCos anonymous CVS.

	Note: There appears to be a hardware bug with OUT transfers.  It
	appears that after resetting the endpoint, the first OUT transfer
	does not trigger a receive interrupt. The BK0 bit is not set,
	however the number of bytes in the receiver FIFO is correct.  The
	second OUT transfer causes both BK0 and BK1 bits to be set and an
	interrupt generated. Currently no workaround is used to correct
	this behavoiour. 
 	
2006-04-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c: Endpoint 3 can send upto 64 bytes at a time,
	not 8.

2006-04-20  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c (usbs_at91_control_data_sent): Send a zero byte
	packet when the transfer is an exact multiple of the endpoint
	buffer size.
	
2006-04-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/usbs_at91.c (usbs_testing_endpoints): Added support for the
	USB testcase framework by exporting what endpoint we have.
	* src/usbs_at91.c (usbs_at91_control_setup): Make requests other
	than standard requests work, eg CLASS, VENDOR etc.
	* src/usbs_at91.c (usbs_at91_handle_reset): Configure the endpoint 
	hardware using the configuration information.
	* src/usbs_at91.c (usbs_at91_control_data_sent): Transaction is
	complete when the buffer is empty _and_ there is no refill
	function defined.
	
2006-03-10  Oliver Munz  <oli@snr.ch>

	* CDL-Update for PLL-Freuenzy.

2006-03-06  Oliver Munz  <oli@snr.ch>

	* USB device driver work finished - haha.
	
	What's missing:
	The set_... and get_freature-host-commands are not implemented yet.
	The dynamical configuration of the data-endpoints is not reflectet in
	the "usbs.h" API.
	Isochronus transfer is not implemented.
	Polling routines are not implemented.
	USB-Tests are not done.
	The PowerDetectPin is not used for the state.
	AT91SAM7X's are not supported at the moment.
	
	But it works for me...
